WiP google login

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,6 +26,8 @@ target 'AwesomeProject' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  # ... Other pods
+
   target 'AwesomeProjectTests' do
     inherit! :complete
     # Pods for testing
