Stupid issue commit, Google Login works

--- a/ios/AwesomeProject/Info.plist
+++ b/ios/AwesomeProject/Info.plist
@@ -27,8 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.889267781491-q61okfnjmecstlrgha4rs072iro0c6nv
-</string>
+				<string>com.googleusercontent.apps.889267781491-ui4bsatr64dgibavabdfjkql9ositd0c</string>
 			</array>
 		</dict>
 	</array>
