--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.1.0",
     "react-native": "0.70.15",
+    "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
   },
